Made start on RNN

--- a/demo_notebook.ipynb
+++ b/demo_notebook.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "markdown",
    "id": "13c05b6a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Read in and plot the Apollo 12 Grade A catalog"
    ]
