add transformers data and preprocessed

--- a/live_notebook.ipynb
+++ b/live_notebook.ipynb
@@ -1606,9 +1606,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "notebook",
    "language": "python",
-   "name": "env"
+   "name": "notebook"
   },
   "language_info": {
    "codemirror_mode": {
