--- a/demo_notebook.ipynb
+++ b/demo_notebook.ipynb
@@ -11,9 +11,7 @@
   {
    "cell_type": "markdown",
    "id": "13c05b6a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Read in and plot the Apollo 12 Grade A catalog"
    ]
@@ -1216,9 +1214,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "notebook",
    "language": "python",
-   "name": "env"
+   "name": "notebook"
   },
   "language_info": {
    "codemirror_mode": {
