--- a/live_notebook.ipynb
+++ b/live_notebook.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "5aed08ff-db7b-48f2-807a-b734b5656ebd",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(72060.0)"
+       "72060.0"
       ]
      },
      "execution_count": 6,
@@ -510,7 +510,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x755ec1ca64e0>"
+       "<matplotlib.legend.Legend at 0x1e8524cdba0>"
       ]
      },
      "execution_count": 9,
@@ -557,7 +557,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x755ec1cde300>"
+       "<matplotlib.legend.Legend at 0x1e84df122c0>"
       ]
      },
      "execution_count": 10,
@@ -610,7 +610,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x755ebee5ca10>"
+       "<matplotlib.legend.Legend at 0x1e84df9d930>"
       ]
      },
      "execution_count": 11,
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "a6c492d4-4137-4dab-a254-98fbb91c57ad",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1161,7 @@
        "[76 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "27e0730e-4c95-4537-844e-d4f0d1887ff5",
    "metadata": {},
    "outputs": [],
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "d01a7153-1996-4b56-9f04-168ca1ab2d2b",
    "metadata": {},
    "outputs": [
@@ -1228,8 +1228,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4min 41s, sys: 4.52 s, total: 4min 45s\n",
-      "Wall time: 4min 48s\n"
+      "CPU times: total: 5min 25s\n",
+      "Wall time: 7min 51s\n"
      ]
     }
    ],
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "33fc59bb-83e0-44f0-bf53-50b79b04d07e",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1316,7 @@
        "128101542"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "7a6cab96-d47e-4445-a9bd-a7f070e54929",
    "metadata": {},
    "outputs": [
@@ -1401,7 +1401,7 @@
        "4  1970-01-19T00:00:01.268774Z -7.097599e-14      0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "36e58bba-5ab4-40d4-a6a1-b521ae38b4ed",
    "metadata": {},
    "outputs": [
@@ -1486,7 +1486,7 @@
        "486942  1970-01-19T20:25:01.344245Z -1.350565e-09      1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "29f133d3-1475-4a0e-a620-305498ab47e5",
    "metadata": {},
    "outputs": [],
@@ -1528,10 +1528,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "6c0ef117-1e4b-4238-a175-cea1be63cd32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "File \u001b[1;32m<timed exec>:3\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "import numpy as np\n",
@@ -1606,9 +1618,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "notebook",
+   "display_name": "ml-venv",
    "language": "python",
-   "name": "notebook"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1620,7 +1632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
