Less expensive Algo to detect quake

--- a/tensorflow.ipynb
+++ b/tensorflow.ipynb
@@ -14,16 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "5316a059-3f27-49d8-b5df-6c578cbc33fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "# required libraries\n",
-    "\n",
-    "%pip install numpy pandas tensorflow scikit-learn seaborn matplotlib obspy keras \n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
@@ -33,15 +28,25 @@
     "import matplotlib.pyplot as plt\n",
     "from obspy.signal.invsim import cosine_taper\n",
     "from scipy.signal import welch\n",
-    "from obspy.signal.freqattributes import spectrum"
+    "from obspy.signal.freqattributes import spectrum\n",
+    "from obspy.signal.trigger import classic_sta_lta, trigger_onset\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2f7ef7a8-904f-4e1f-9147-7e3e0254b0ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: File not found: data/lunar/training/data/S12_GradeA/xa.s12.00.mhz.1971-04-13HR00_evid00029.mseed\n"
+     ]
+    }
+   ],
    "source": [
     "# lets collect the data from the catalog (this \n",
     "\n",
@@ -50,11 +55,33 @@
     "training_data = {}\n",
     "\n",
     "for index, row in catalog.iterrows():\n",
-    "    training_data[row.evid] = {\n",
-    "        'data': read('data/lunar/training/data/S12_GradeA/' + row.filename + '.mseed'),\n",
-    "        'rel_time': row['time_rel(sec)'],\n",
-    "        'type': row['mq_type']\n",
-    "    }"
+    "    try:\n",
+    "        file_path = f'data/lunar/training/data/S12_GradeA/{row.filename}.mseed'\n",
+    "        \n",
+    "        # Check if the file exists\n",
+    "        if not os.path.exists(file_path):\n",
+    "            raise FileNotFoundError(f\"File not found: {file_path}\")\n",
+    "        \n",
+    "        # Read the data\n",
+    "        data = read(file_path)\n",
+    "        \n",
+    "        # Ensure the necessary columns are present\n",
+    "        if 'time_rel(sec)' not in row or 'mq_type' not in row:\n",
+    "            raise KeyError(\"Missing required columns in the row data\")\n",
+    "        \n",
+    "        # Add to training_data\n",
+    "        training_data[row.evid] = {\n",
+    "            'data': data,\n",
+    "            'rel_time': row['time_rel(sec)'],\n",
+    "            'type': row['mq_type']\n",
+    "        }\n",
+    "    \n",
+    "    except FileNotFoundError as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "    except KeyError as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An unexpected error occurred:{e}\")"
    ]
   },
   {
@@ -68,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b678ce92-0f89-4e10-b12e-d5aa8c72504a",
    "metadata": {},
    "outputs": [],
@@ -82,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "80b0ac31-b733-4d2e-9382-7644525ede6f",
    "metadata": {},
    "outputs": [],
@@ -127,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "f7b5ca26-6571-4650-926d-da4ef7ffd98a",
    "metadata": {},
    "outputs": [
@@ -219,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "fcb50305-33ca-40a9-b980-5019225df78e",
    "metadata": {},
    "outputs": [],
@@ -249,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "e50e82a7-21a5-40c6-8a85-8e1c3ac53256",
    "metadata": {},
    "outputs": [],
@@ -275,53 +302,10 @@
    "execution_count": null,
    "id": "dcfd9f3d-7c93-42d6-9ffd-dd80b4ecb62e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 20ms/step - loss: 0.4780 - sparse_categorical_accuracy: 0.8696 - val_loss: 2.9385 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 2/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 18ms/step - loss: 0.4198 - sparse_categorical_accuracy: 0.8533 - val_loss: 29.1739 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 3/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.4076 - sparse_categorical_accuracy: 0.8612 - val_loss: 26.3008 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 4/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.3734 - sparse_categorical_accuracy: 0.8780 - val_loss: 14.0340 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 5/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.4233 - sparse_categorical_accuracy: 0.8535 - val_loss: 20.6006 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 6/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 20ms/step - loss: 0.3989 - sparse_categorical_accuracy: 0.8653 - val_loss: 11.6492 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 7/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.3411 - sparse_categorical_accuracy: 0.8938 - val_loss: 51.6872 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 8/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 19ms/step - loss: 0.3967 - sparse_categorical_accuracy: 0.8681 - val_loss: 6.1204 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 9/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.3743 - sparse_categorical_accuracy: 0.8790 - val_loss: 1.2714 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 10/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 18ms/step - loss: 0.4086 - sparse_categorical_accuracy: 0.8608 - val_loss: 6.6605 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 11/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 18ms/step - loss: 0.3541 - sparse_categorical_accuracy: 0.8883 - val_loss: 2.4564 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 12/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.3600 - sparse_categorical_accuracy: 0.8869 - val_loss: 19.6465 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 13/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 20ms/step - loss: 0.3674 - sparse_categorical_accuracy: 0.8820 - val_loss: 5.2126 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 14/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 18ms/step - loss: 0.4000 - sparse_categorical_accuracy: 0.8626 - val_loss: 10.4750 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 15/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 20ms/step - loss: 0.3888 - sparse_categorical_accuracy: 0.8730 - val_loss: 117.0240 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 16/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.3848 - sparse_categorical_accuracy: 0.8720 - val_loss: 0.6029 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 17/50\n",
-      "\u001b[1m128/542\u001b[0m \u001b[32m━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m8s\u001b[0m 22ms/step - loss: 0.3633 - sparse_categorical_accuracy: 0.8870"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from BinaryTransformClassify import BinaryTransformClassifier \n",
-    "\n",
     "btc = BinaryTransformClassifier(X_train.shape[1:])\n",
-    "\n",
     "history = btc.train(50, X_train, Y_train, batch_size=1)"
    ]
   },
@@ -363,13 +347,73 @@
    "source": [
     "np.unique(Y_test, return_counts=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "686a8e1e",
+   "metadata": {},
+   "source": [
+    "# Lightweight STA/LTA Algo (idea)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "51e98461",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def apply_sta_lta_to_events(training_data, sta_len=120, lta_len=600, thr_on=4, thr_off=1.5):\n",
+    "#     results = {}\n",
+    "    \n",
+    "#     for event_id, event_data in training_data.items():\n",
+    "#         # Extract sampling rate and data for the event\n",
+    "#         sampling_rate = event_data['data'][0].stats.sampling_rate\n",
+    "#         data = event_data['data'][0].data\n",
+    "        \n",
+    "#         # Run STA/LTA on the data\n",
+    "#         cft = classic_sta_lta(data, int(sta_len * sampling_rate), int(lta_len * sampling_rate))\n",
+    "        \n",
+    "#         # Detect triggers\n",
+    "#         on_off = np.array(trigger_onset(cft, thr_on, thr_off))\n",
+    "        \n",
+    "#         results[event_id] = {\n",
+    "#             'sampling_rate': sampling_rate,\n",
+    "#             'data': data,\n",
+    "#             'on_off': on_off\n",
+    "#         }\n",
+    "    \n",
+    "#     return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1e618f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sta_lta_results = apply_sta_lta_to_events(training_data)\n",
+    "\n",
+    "# for event_id, result in sta_lta_results.items():\n",
+    "#     print(f\"Event ID: {event_id}\")\n",
+    "#     print(f\"{result}\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a501d4b",
+   "metadata": {},
+   "source": [
+    "## Potential to use the above as a threshold to kick off 2nd model?"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "notebook",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "notebook"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -381,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
