new model shape

--- a/tensorflow.ipynb
+++ b/tensorflow.ipynb
@@ -29,7 +29,7 @@
     "import seaborn as sns\n",
     "from obspy import read\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler, normalize\n",
     "import matplotlib.pyplot as plt\n",
     "from obspy.signal.invsim import cosine_taper\n",
     "from scipy.signal import welch\n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "e50e82a7-21a5-40c6-8a85-8e1c3ac53256",
    "metadata": {},
    "outputs": [],
@@ -262,9 +262,7 @@
     "    X = X + event_X\n",
     "    Y = Y + event_Y\n",
     "\n",
-    "\n",
-    "\n",
-    "X = np.array(X)\n",
+    "X = np.array([normalize(x) for x in X])\n",
     "Y = np.array(Y)\n",
     "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.1, random_state=69)"
@@ -281,48 +279,19 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 20ms/step - loss: 0.4780 - sparse_categorical_accuracy: 0.8696 - val_loss: 2.9385 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 2/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 18ms/step - loss: 0.4198 - sparse_categorical_accuracy: 0.8533 - val_loss: 29.1739 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 3/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.4076 - sparse_categorical_accuracy: 0.8612 - val_loss: 26.3008 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 4/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.3734 - sparse_categorical_accuracy: 0.8780 - val_loss: 14.0340 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 5/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.4233 - sparse_categorical_accuracy: 0.8535 - val_loss: 20.6006 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 6/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 20ms/step - loss: 0.3989 - sparse_categorical_accuracy: 0.8653 - val_loss: 11.6492 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 7/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.3411 - sparse_categorical_accuracy: 0.8938 - val_loss: 51.6872 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 8/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 19ms/step - loss: 0.3967 - sparse_categorical_accuracy: 0.8681 - val_loss: 6.1204 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 9/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.3743 - sparse_categorical_accuracy: 0.8790 - val_loss: 1.2714 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 10/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 18ms/step - loss: 0.4086 - sparse_categorical_accuracy: 0.8608 - val_loss: 6.6605 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 11/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 18ms/step - loss: 0.3541 - sparse_categorical_accuracy: 0.8883 - val_loss: 2.4564 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 12/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.3600 - sparse_categorical_accuracy: 0.8869 - val_loss: 19.6465 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 13/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 20ms/step - loss: 0.3674 - sparse_categorical_accuracy: 0.8820 - val_loss: 5.2126 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 14/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 18ms/step - loss: 0.4000 - sparse_categorical_accuracy: 0.8626 - val_loss: 10.4750 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 15/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 20ms/step - loss: 0.3888 - sparse_categorical_accuracy: 0.8730 - val_loss: 117.0240 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 16/50\n",
-      "\u001b[1m542/542\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 19ms/step - loss: 0.3848 - sparse_categorical_accuracy: 0.8720 - val_loss: 0.6029 - val_sparse_categorical_accuracy: 0.8824 - learning_rate: 0.0010\n",
-      "Epoch 17/50\n",
-      "\u001b[1m128/542\u001b[0m \u001b[32m━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m8s\u001b[0m 22ms/step - loss: 0.3633 - sparse_categorical_accuracy: 0.8870"
+      "\u001b[1m10/28\u001b[0m \u001b[32m━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━\u001b[0m \u001b[1m5:43\u001b[0m 19s/step - loss: 0.3566 - sparse_categorical_accuracy: 0.9060"
      ]
     }
    ],
    "source": [
     "from BinaryTransformClassify import BinaryTransformClassifier \n",
     "\n",
-    "btc = BinaryTransformClassifier(X_train.shape[1:])\n",
+    "X_train = X_train.reshape(len(X_train), 10, 10000, 1)\n",
     "\n",
-    "history = btc.train(50, X_train, Y_train, batch_size=1)"
+    "btc = BinaryTransformClassifier(X_train[0].shape)\n",
+    "\n",
+    "history = btc.train(50, X_train, Y_train, batch_size=20)\n",
+    "\n"
    ]
   },
   {
@@ -363,6 +332,14 @@
    "source": [
     "np.unique(Y_test, return_counts=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "388311a2-e27a-40f5-b525-be95281d6849",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
