--- a/balancedData.ipynb
+++ b/balancedData.ipynb
@@ -1474,7 +1474,7 @@
     "    # Pad the features array to the maximum length\n",
     "    padded_features = np.pad(features, (0, max_length - features.size), 'constant')\n",
     "    \n",
-    "    # Reshape to add an extra dimension\n",
+    "   \n",
     "    padded_features = padded_features.reshape(-1, 1)\n",
     "    \n",
     "    X.append(padded_features)\n",
@@ -1692,7 +1692,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Option 1: Filter out samples with label 2\n",
     "mask = Y_train != 2\n",
     "X_train = X_train[mask]\n",
     "Y_train = Y_train[mask]"
@@ -1813,10 +1812,9 @@
    "source": [
     "from BinaryTransformClassify import BinaryTransformClassifier \n",
     "\n",
-    "# Create an instance of the BinaryTransformClassifier class\n",
     "btc = BinaryTransformClassifier(X_train.shape[1:])\n",
     "\n",
-    "# Train the classifier\n",
+    "# Train\n",
     "history = btc.train(50, X_train, Y_train, batch_size=1)"
    ]
   },
