--- a/svmModel.ipynb
+++ b/svmModel.ipynb
@@ -78,8 +78,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# first let's peek at a sample of the seismic events, to determine how large we should make the windows.\n",
-    "\n",
     "events = training_data.keys()\n",
     "\n",
     "WINDOW = 10000 # 10,000 secs for training window\n",
@@ -128,6 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# intial calulations for lowres data was done in tensorflow.ipynb\n",
     "# pull from reflextion\n",
     "\n",
     "for event in events:\n",
@@ -809,7 +808,7 @@
     }
    ],
    "source": [
-    "# Create an instance of the SVM classifier with a linear kernel\n",
+    "# trying to see if radial kernel function will work well\n",
     "svm_classifier = SVC(kernel='rbf', gamma=\"auto\", random_state=69)\n",
     "\n",
     "# Train the SVM classifier on the training data\n",
