--- a/svmModel.ipynb
+++ b/svmModel.ipynb
@@ -1819,6 +1819,8 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.svm import SVC\n",
     "\n",
+    "# changed the parameters slightly to plot a decision boundary.\n",
+    "\n",
     "X_train_reshaped = X_train.reshape(X_train.shape[0], -1)\n",
     "pca = PCA(n_components=2)\n",
     "X_train_pca = pca.fit_transform(X_train_reshaped)\n",
